# 119-CycleAccurateHardware

./: .gitignore  0801008n1  0801008n2  0801008n3  0801008n4  CMakeLists.txt  Mac_unit.cpp  Main.cpp  cache_model_fifo.cpp  cache_model_lru.cpp  channel.h  mac_unit.h  request.txt  storage.txt  systolic_array.h
.old/: channel.tpp
coral/: 2dconv_np.py  ASM_GUIDE.md
coral/operations/: 2dconv.py  matmult.py  matmult_np.py
coral/systolic/: channel.py  mac_unit.py  systolic_array.py  testing.py
coral/systolic_testing/: matmult_inf.py  matmult_model.py
include/: Accumulator.h  ArrayWrite.h  Cluster.h  Cluster.tpp  ISA.h  Port.h  TPU.h  TPU.tpp  activation.h  cache.h  cache_fifo.h  cache_lru.h  channel.h  channel.tpp  channelM.h  config_manager.h  globals.h  host_memory.h  load_store_unit.h  mac_unit.h  mac_unit.tpp  memory.h  network_storage.h  perf_counter.h  request_structs.h  systolic_array.h  systolic_array.tpp
input/: 0801008n0  requests.txt  storage.txt
lib/: Accumulator.cpp  ArrayWrite.cpp  ISA.cpp  activation.cpp  bank_memory.cpp  cache.cpp  cache_fifo.cpp  cache_lru.cpp  config_manager.cpp  globals.cpp  host_memory.cpp  load_store_unit.cpp  mac_unit.cpp  network_storage.cpp  perf_counter.cpp  systolic_array.cpp
output/: outfile.txt
scripts/: cppnumOutbatchSelect_inputgenerator.cpp  generate_tpu_inference_data.py  numOutbatchSelectsampleSelect_generator.py
src/: Main.cpp  RandomNum.cpp  main.cpp  mainM.cpp  table_auto.py
tests/: requests-1716782613-1  requests-1716784291-2-2  requests-1716784414-2-4  requests-1716784454-2-8  requests-1716784487-2-16  requests-1716785146-3-1-2  requests-1716785343-3-1-4  requests-1716785369-3-1-8  requests-1716785392-3-1-16  requests-1716785454-3-1-32  requests-1716786841-4-2-2  requests-1716786962-4-4-2  requests-1716786993-4-8-2  requests-1716787024-4-16-2  requests-1716787103-4-2-4  requests-1716787143-4-4-4  requests-1716787175-4-8-4  requests-1716787232-4-16-4  requests-1716787480-4-2-8  requests-1716787674-4-4-8  requests-1716787704-4-8-8  requests-1716787747-4-16-8  requests-1716787910-4-2-16  requests-1716787942-4-4-16  requests-1716787953-4-8-16  requests-1716787963-4-16-16  requests-1716788026-4-2-32  requests-1716788041-4-4-32  requests-1716788047-4-8-32  requests-1716788058-4-16-32  storage-1716782613-1  storage-1716784291-2-2  storage-1716784414-2-4  storage-1716784454-2-8  storage-1716784487-2-16
weight/: 0801008n1
weights/: nothing.txt
